# django-user-pinned

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: django-user-pinned-ci.yml
django_user_pinned/: admin.py  api_views.py  apps.py  models.py  views.py
django_user_pinned/locale/nl/LC_MESSAGES/: django.po
